# cnet

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  client.cpp  server.cpp
inc/: args.hpp  client.hpp  cnet.hpp  logging.hpp  server.hpp
src/: client.cpp  cnet.cpp  server.cpp
src/unix/: client.cpp  server.cpp
src/win32/: client.cpp  global_state.hpp  server.cpp
test/src/: main.cpp
